<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.list.NotificationsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <Button
            android:id="@+id/widgets_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/widgets_button_on" />

        <ProgressBar
            android:id="@+id/widgets_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/widgets_button"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/widgets_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/widgets_progressbar"
            android:layout_centerInParent="true"
            android:checked="false"
            android:text="@string/widgets_checkbox" />

        <TextView
            android:id="@+id/widgets_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/widgets_checkbox"
            android:layout_centerInParent="true"
            android:text="@string/widgets_text_view_off" />

        <RadioGroup
            android:id="@+id/widgets_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/widgets_textview"
            android:layout_centerInParent="true">

            <RadioButton
                android:id="@+id/widgets_radio_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widgets_radio_first" />

            <RadioButton
                android:id="@+id/widgets_radio_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widgets_radio_second" />
        </RadioGroup>

        <EditText
            android:id="@+id/widgets_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/widgets_radio_group"
            android:layout_centerInParent="true"
            android:enabled="false"
            android:hint="@string/widgets_edittext" />
    </RelativeLayout>

</RelativeLayout>