<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/multimedia_text_view_music_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/multimedia_text_view_music_label" />

    <Button
        android:id="@+id/multimedia_button_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multimedia_text_view_music_label"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/multimedia_button_music_on" />

    <TextView
        android:id="@+id/multimedia_text_view_video_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multimedia_button_music"
        android:gravity="center"
        android:text="@string/multimedia_text_view_video_label" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multimedia_text_view_video_label">

        <VideoView
            android:id="@+id/multimedia_video_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

</RelativeLayout>